# pools-rs

./: Cargo.toml  build.rs  diesel.toml  readme.md  schema.graphql
migrations/2024-09-30-052002_create_channels/: up.sql
migrations/2024-10-01-065330_create_posts_and_comments/: down.sql  up.sql
src/: build.rs  main.rs
src/api/: mod.rs  util.rs
src/api/channel/: mod.rs  mutation.rs  query.rs
src/api/comment/: mod.rs  mutation.rs
src/api/post/: mod.rs  mutation.rs
src/pg/: channel.rs  comment.rs  mod.rs  post.rs  schema.rs
